--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -32,6 +32,7 @@
 
 input[type=text],
 input[type=password] {
+    font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     width: 75%;
     margin: auto 10%;
     padding: 5px;
