--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -9,6 +9,7 @@
 .profile_title {
     font-weight: bold;
     font-size: 30px;
+    margin-top: 1%;
 }
 
 .create_button {
@@ -23,6 +24,13 @@
     margin: 5% auto;
     padding: 15px 5px;
     width: 60%;
+}
+
+.loading {
+    font-size: large;
+    text-align: center;
+    padding: 30px;
+    margin-top: 5%;
 }
 
 textarea {
