--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -27,12 +27,8 @@ body {
 }
 
 .button {
-    font-size: 15px;
-    padding: 0.5rem 0.6rem;
-    margin-top: 4px;
     margin-right: 4px;
-    border-radius: 12px;
-    background: rgba(175, 185, 193, 0.465);
+    margin-top: 4px;
 }
 
 .header {
@@ -82,6 +78,12 @@ body {
     padding: 5px 30px;
     padding-bottom: 15px;
     margin-bottom: 1%;
+}
+
+.timeout {
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: 5%;
 }
 
 @media (max-width: 600px) {
