--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -10,6 +10,7 @@
     font-weight: bold;
     font-size: 30px;
     margin-top: 1%;
+    text-shadow: 0.5px 0.5px 0.5px rgba(195, 191, 191, 0.684);
 }
 
 .create_button {
@@ -17,10 +18,13 @@
     margin-top: 1%;
 }
 
-.post_wrapper {
+.edit_wrapper {
     border-style: solid;
     border-width: 1px;
-    border-color: rgb(47, 48, 48);
+    border-radius: 12px;
+    border-color: rgba(195, 191, 191, 0.684);
+    background-color: rgb(252, 252, 252);
+    box-shadow: 1.5px 2px 2px rgba(195, 191, 191, 0.684);
     display: block;
     margin: 5% auto;
     padding: 40px 0;
@@ -37,9 +41,10 @@
 .title_wrapper {
     display: flex;
     justify-content: space-between;
+    margin-bottom: -2%;
 }
 
-.update_buttons {
+.edit_buttons {
     padding-top: 10px;
     display: inline-block;
 }
@@ -50,4 +55,9 @@ textarea {
     height: 80px;
     margin: auto 10%;
     padding: 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    border-color: rgba(94, 94, 94, 0.84);
+    box-shadow: 1px 1px 1px rgba(195, 191, 191, 0.684);
 }
