--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -1,3 +1,16 @@
+textarea {
+    font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    width: 75%;
+    height: 80px;
+    margin: auto 10%;
+    padding: 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    border-color: rgba(94, 94, 94, 0.84);
+    box-shadow: 1px 1px 1px rgba(195, 191, 191, 0.684);
+}
+
 .top_profile {
     padding: 25px;
     margin-left: 1%;
@@ -38,26 +51,41 @@
     margin-top: 5%;
 }
 
-.title_wrapper {
+.preview_wrapper {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: -2%;
+    justify-content: space-evenly;
+}
+
+.preview {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 12px;
+    border-color: rgba(195, 191, 191, 0.684);
+    background-color: rgb(252, 252, 252);
+    box-shadow: 1.5px 2px 2px rgba(195, 191, 191, 0.684);
+    padding: 5px 30px;
+    padding-bottom: 15px;
+    margin-bottom: 1%;
+    width: 100%;
 }
 
 .edit_buttons {
-    padding-top: 10px;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+    padding-top: 20px;
+    padding-left: 20px;
 }
 
-textarea {
-    font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    width: 75%;
-    height: 80px;
-    margin: auto 10%;
-    padding: 5px;
+.post {
     border-style: solid;
     border-width: 1px;
-    border-radius: 5px;
-    border-color: rgba(94, 94, 94, 0.84);
-    box-shadow: 1px 1px 1px rgba(195, 191, 191, 0.684);
+    border-radius: 12px;
+    border-color: rgba(195, 191, 191, 0.684);
+    background-color: rgb(252, 252, 252);
+    box-shadow: 1.5px 2px 2px rgba(195, 191, 191, 0.684);
+    display: block;
+    margin: 5% auto;
+    padding: 40px 0;
+    width: 70%;
 }
