--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -13,8 +13,7 @@ textarea {
 
 .top_profile {
     padding: 25px;
-    margin-left: 1%;
-    margin-right: 1%;
+    margin: 1% 1% 2.5% 1%;
     display: flex;
     justify-content: space-between;
 }
