--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -11,6 +11,12 @@ textarea {
     box-shadow: 1px 1px 1px rgba(195, 191, 191, 0.684);
 }
 
+hr {
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: rgba(131, 131, 131, 0.386);
+}
+
 .top_profile {
     padding: 25px;
     margin: 1% 1% 2.5% 1%;
@@ -85,6 +91,62 @@ textarea {
     box-shadow: 1.5px 2px 2px rgba(195, 191, 191, 0.684);
     display: block;
     margin: 5% auto;
-    padding: 40px 0;
+    padding: 20px 0;
     width: 70%;
+}
+
+.post_title,
+.post_author,
+.post_body,
+.post_tag {
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 15px;
+}
+
+.post_title {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 25px;
+    font-weight: bold;
+    text-shadow: 0.5px 0.5px 0.5px rgba(195, 191, 191, 0.684);
+}
+
+.post_author {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.post_body {
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.post_tag {
+    height: auto;
+    padding: 2px 8px;
+    margin-top: 30px;
+    margin-bottom: 5px;
+    font-size: 12px;
+    border-style: solid;
+    border-radius: 5px;
+    border-color: rgba(148, 183, 221, 0.92);
+    color: rgb(37, 79, 123);
+    background-color: rgba(157, 193, 231, 0.733);
+    box-shadow: 1px 1px 1px rgba(195, 191, 191, 0.684);
+}
+
+@media (max-width: 600px) {
+
+    .post_title,
+    .post_author,
+    .post_body,
+    .post_tag {
+        margin-left: 8%;
+        margin-right: 8%;
+    }
+
+    .post_tag {
+        margin-top: 25px;
+    }
 }
