--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -11,6 +11,15 @@ textarea {
     box-shadow: 1px 1px 1px rgba(195, 191, 191, 0.684);
 }
 
+.comment_text {
+    font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    border-color: rgba(94, 94, 94, 0.84);
+    box-shadow: 1px 1px 1px rgba(195, 191, 191, 0.684);
+}
+
 hr {
     border-style: solid;
     border-width: 0.5px;
@@ -82,7 +91,8 @@ hr {
     padding-left: 20px;
 }
 
-.post {
+.post,
+.comment {
     border-style: solid;
     border-width: 1px;
     border-radius: 12px;
@@ -90,9 +100,30 @@ hr {
     background-color: rgb(252, 252, 252);
     box-shadow: 1.5px 2px 2px rgba(195, 191, 191, 0.684);
     display: block;
-    margin: 5% auto;
+    margin: 5% auto 2% auto;
     padding: 20px 0;
     width: 70%;
+}
+
+.comment {
+    margin: auto auto;
+    padding: 10px auto;
+}
+
+.comment_text_wrapper {
+    width: 125%;
+    margin-left: -10%;
+}
+
+.comment_text {
+    display: block;
+    height: 50px;
+    margin-bottom: 3px;
+}
+
+.comment_button {
+    display: block;
+    margin: 2px 10%;
 }
 
 .post_title,
@@ -148,5 +179,31 @@ hr {
 
     .post_tag {
         margin-top: 25px;
+    }
+
+    .comment_text_wrapper {
+        width: 120%;
+        margin-left: -9%;
+    }
+}
+
+@media (max-width: 699px) {
+    .comment_text_wrapper {
+        width: 120%;
+        margin-left: -9%;
+    }
+}
+
+@media (min-width: 700px) and (max-width: 799px) {
+    .comment_text_wrapper {
+        width: 121%;
+        margin-left: -9%;
+    }
+}
+
+@media (min-width: 800px) and (max-width: 1000px) {
+    .comment_text_wrapper {
+        width: 123%;
+        margin-left: -9.5%;
     }
 }
