--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -106,7 +106,7 @@ hr {
 }
 
 .comment {
-    margin: auto auto;
+    margin: 1% auto;
     padding: 10px auto;
 }
 
@@ -124,6 +124,34 @@ hr {
 .comment_button {
     display: block;
     margin: 2px 10%;
+}
+
+.comment_author,
+.comment_body {
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 15px;
+}
+
+.comment_wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.comment_author {
+    margin-top: -4px;
+    font-size: 13px;
+}
+
+.comment_delete {
+    display: inline-block;
+    margin-top: -15px;
+    margin-right: 1%;
+}
+
+.comment_body {
+    margin-top: 25px;
+    margin-bottom: 10px;
 }
 
 .post_title,
@@ -184,6 +212,10 @@ hr {
     .comment_text_wrapper {
         width: 120%;
         margin-left: -9%;
+    }
+
+    .comment_author {
+        margin-top: -8px;
     }
 }
 
