--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -2,7 +2,7 @@ input[type=text],
 input[type=password] {
     font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     width: 75%;
-    margin: auto 10%;
+    margin: auto 10% 10px 10%;
     padding: 5px;
     border-style: solid;
     border-width: 1px;
@@ -32,7 +32,7 @@ input[type=password] {
 }
 
 .label {
-    margin: 2% 10%;
+    margin: 5px 10%;
     font-size: 15px;
 }
 
