--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -121,7 +121,8 @@ hr {
 }
 
 .comment_author,
-.comment_body {
+.comment_body,
+.vote_wrapper {
     margin-left: 30px;
     margin-right: 30px;
     font-size: 15px;
@@ -146,6 +147,25 @@ hr {
 .comment_body {
     margin-top: 25px;
     margin-bottom: 10px;
+}
+
+.vote_wrapper {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 30px;
+}
+
+.vote_button {
+    padding: 0 9px;
+    box-shadow: 0.5px 1px 1px rgba(195, 191, 191, 0.684);
+}
+
+.score {
+    font-weight: bold;
+    font-size: 14px;
+    color: rgba(59, 58, 58, 0.898);
+    margin-right: 4px;
+    margin: auto 8px;
 }
 
 .post_title,
